--- a/src/main/resources/templates/board/newForm.html
+++ b/src/main/resources/templates/board/newForm.html
@@ -3,130 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="email=no">
-    <title>Ragister</title>
+    <title>Board</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="_csrf" content="${_csrf.token}"/>
     <link type="text/css" rel="stylesheet" href="../css/style.css">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
-<div class="register">
-    <div class="mem_copy">필수 입력사항입니다.</div>
-
-    <form id="registrationForm" action="/member/signup" method="post">
-        <table class="register_type">
-            <colgroup>
-                <col width="14%">
-                <col width="*">
-            </colgroup>
-            <tbody>
-            <tr>
-                <th><span>회원ID</span></th>
-                <td><input type="text" name="memberId" id="memberId" placeholder="아이디를 입력해주세요" style="width:500px;"><button class="button_type memberegister ml5" onclick="checkDuplicate()">중복확인</button></td>
-            </tr>
-            <tr>
-                <th><span>비밀번호</span></th>
-                <td><input type="text" name="password" placeholder="비밀번호를 입력해주세요" style="width:500px;"></td>
-            </tr>
-            <tr>
-                <th><span>비밀번호확인</span></th>
-                <td><input type="text" name="confirmPassword" placeholder="" style="width:500px;"></td>
-            </tr>
-            <tr>
-                <th><span>회원유형</span></th>
-                <td>
-                    <select name="memberType" style="width:500px;">
-                        <option value="admin">관리자</option>
-                        <option value="member">일반 회원</option>
-                    </select>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="buttonframe">
-            <button type="button" class="custom-btn btn-ani3 btenw" onclick="submitForm()"><span>등록</span></button>
+<div id="wrap">
+    <div id="cont">
+        <nav>
+            <h2><i class="fas fa-edit mr10"></i>게시판 생성</h2>
+            <ul>
+                <li th:each="board : ${boards}">
+                    <a th:href="@{'/board/' + ${board.seq}}"><i class="fa-regular fa-address-book mr10"></i><span
+                            th:text="${board.name}"></span></a>
+                </li>
+            </ul>
+        </nav>
+        <div class="contents">
+            <div class="container">
+                <div class="inner">
+                    <h3>게시판 생성</h3>
+                    <form th:action="@{/board}" method="post" th:object="${board}">
+                        <table class="board">
+                            <colgroup>
+                                <col width="15%">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
+                            <tr>
+                                <th>게시판명</th>
+                                <td><input type="text" th:field="*{name}" placeholder="게시판 이름을 입력해주세요"
+                                           style="width:500px;"></td>
+                            </tr>
+                            <tr>
+                                <th>게시판 타입</th>
+                                <td>
+                                    <select th:field="*{boardType}" style="width:500px;">
+                                        <option value="list">리스트형</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>첨부파일갯수</th>
+                                <td>
+                                    <select th:field="*{fileCount}" style="width:500px;">
+                                        <option value="0">0</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>댓글여부</th>
+                                <td>
+                                    <input type="radio" id="yes" th:field="*{commentStatus}" value="true"><label
+                                        for="yes" class="mr30">예</label>
+                                    <input type="radio" id="no" th:field="*{commentStatus}" value="false"><label
+                                        for="no">아니오</label>
+                                </td>
+                            </tr>
+                            <tr class="pd20">
+                                <th>게사판 공개</th>
+                                <td>
+                                    <input type="radio" id="publicYes" th:field="*{openStatus}" value="true"><label
+                                        for="publicYes" class="mr30">예</label>
+                                    <input type="radio" id="publicNo" th:field="*{openStatus}" value="false"><label
+                                        for="publicNo">아니오</label>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <div class="buttonframe">
+                            <button class="custom-btn btn-ani3 btenw" type="submit"><span>등록</span></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-    </form>
+    </div>
+    <footer>
+        COPYRIGHT 2022 COREMETHOD. ALL RIGHTS RESERVED.
+    </footer>
 </div>
-
-<script>
-    function checkDuplicate() {
-        var memberId = document.getElementById("memberId").value;
-        if (!memberId) {
-            alert("아이디를 입력해주세요.");
-            return;
-        }
-
-        var xhr = new XMLHttpRequest();
-        xhr.open("GET", "/member/checkDuplicate?memberId=" + memberId, true);
-        xhr.onreadystatechange = function() {
-            if (xhr.readyState === 4) {
-                if (xhr.status === 200) {
-                    var isDuplicate = JSON.parse(xhr.responseText);
-                    if (isDuplicate) {
-                        alert("이미 사용 중인 아이디입니다.");
-                    } else {
-                        alert("사용 가능한 아이디입니다.");
-                    }
-                } else {
-                    alert("서버 오류가 발생했습니다.");
-                }
-            }
-        };
-        xhr.send();
-    }
-
-    function submitForm() {
-        var memberId = document.getElementById("memberId").value;
-        if (!memberId) {
-            alert("아이디를 입력해주세요.");
-            return;
-        }
-
-        var password = document.getElementsByName("password")[0].value;
-        var confirmPassword = document.getElementsByName("confirmPassword")[0].value;
-        if (!password || !confirmPassword) {
-            alert("비밀번호를 입력해주세요.");
-            return;
-        }
-        if (password !== confirmPassword) {
-            alert("비밀번호가 일치하지 않습니다.");
-            return;
-        }
-
-        var isDuplicate = confirmDuplicate(memberId); // 중복 확인
-        if (!isDuplicate) {
-            // 중복이 아닌 경우에만 회원 가입 처리
-            document.getElementById("registrationForm").submit();
-        }
-    }
-
-    function confirmDuplicate(memberId) {
-        // 이 함수는 중복 확인만 수행하고 결과를 반환합니다.
-        var xhr = new XMLHttpRequest();
-        xhr.open("GET", "/member/checkDuplicate?memberId=" + memberId, false); // 동기적 요청
-        xhr.send();
-        if (xhr.status === 200) {
-            var isDuplicate = JSON.parse(xhr.responseText);
-            if (isDuplicate) {
-                alert("이미 사용 중인 아이디입니다.");
-                return true; // 중복됨
-            } else {
-                alert("사용 가능한 아이디입니다.");
-                return false; // 중복되지 않음
-            }
-        } else {
-            alert("서버 오류가 발생했습니다.");
-            return true; // 중복 확인 실패로 처리
-        }
-    }
-</script>
 </body>
+
 </html>
