--- a/src/main/resources/templates/member/signupForm.html
+++ b/src/main/resources/templates/member/signupForm.html
@@ -43,8 +43,8 @@
                 <th><span>회원유형</span></th>
                 <td>
                     <select name="memberType" style="width:500px;">
-                        <option value="ROLE_ADMIN">관리자</option>
-                        <option value="ROLE_MEMBER">일반 회원</option>
+                        <option value="ADMIN">관리자</option>
+                        <option value="MEMBER">일반 회원</option>
                     </select>
                 </td>
             </tr>
